Completed km_openmp.c and km_pthreads.c

--- a/hw1_k-means_cluster/Makefile
+++ b/hw1_k-means_cluster/Makefile
@@ -1,2 +1,7 @@
-km_pthreads: km_pthreads.c
+all: km_pthreads km_openmp
+
+km_pthreads: km_pthreads.c timing.h
 	gcc -o km_pthreads km_pthreads.c timing.h -pthread -lm
+
+km_openmp: km_openmp.c timing.h
+	gcc -o km_openmp km_openmp.c timing.h -fopenmp -lm
