--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 #ignore specific binary files
 */km_pthreads
 */km_openmp
+
+#ignore .tar.gz
+*.tar.gz
+
+#remove files from CSCI 5451 homework 1 plotting
+.fuse*
