km_pthreads.c - Changed centroid calculation to sum all points on thread before   dividing
Makefile
- added -O2 optimization flag for km_pthreads

--- a/hw1_k-means_cluster/Makefile
+++ b/hw1_k-means_cluster/Makefile
@@ -4,4 +4,4 @@ km_pthreads: km_pthreads.c timing.h
 	gcc -o km_pthreads km_pthreads.c timing.h -pthread -lm
 
 km_openmp: km_openmp.c timing.h
-	gcc -o km_openmp km_openmp.c timing.h -fopenmp -lm
+	gcc -o km_openmp km_openmp.c timing.h -O2 -Wall -fopenmp -lm
