HW2: - finished OpenMP implementation

--- a/hw2_radix/Makefile
+++ b/hw2_radix/Makefile
@@ -1,2 +1,10 @@
-rs_serial: rs_serial.c rs_shared.h
-	gcc -g rs_serial.c rs_shared.h -lm
+CC = gcc
+CCFLAGS = -lm -Wall -O2 -march=native
+
+all: rs_openmp
+
+debug: CCFLAGS += -g
+debug: rs_openmp
+
+rs_openmp: rs_openmp.c rs_shared.h
+	$(CC) -o rs_openmp rs_openmp.c rs_shared.h -fopenmp $(CCFLAGS)
