HW2: rs_mpi.c - Reads data and partitions across processes - Determines global locations of local bins - Started finding locations to send numbers for next iteration

--- a/hw2_radix/Makefile
+++ b/hw2_radix/Makefile
@@ -1,5 +1,6 @@
 CC = icc
-CCFLAGS = -O2 -lm -Wall -march=native
+CCFLAGS = -lm -Wall -march=native
+RELEASEFLAGS = -O2
 
 all: rs_openmp rs_mpi
 
@@ -7,7 +8,7 @@ debug: CCFLAGS += -g
 debug: rs_openmp rs_mpi
 
 rs_openmp: rs_openmp.c rs_shared.h
-	$(CC) -o rs_openmp rs_openmp.c rs_shared.h -fopenmp $(CCFLAGS)
+	$(CC) -o rs_openmp rs_openmp.c rs_shared.h -fopenmp $(CCFLAGS) $(RELEASEFLAGS)
 
 rs_mpi: rs_mpi.c rs_shared.h
-	mpicc -o rs_mpi rs_mpi.c rs_shared.h
+	mpicc -o rs_mpi rs_mpi.c rs_shared.h $(CCFLAGS)
