HW2 Radix Sort: - eliminated need for file of shared code

--- a/hw2_radix/Makefile
+++ b/hw2_radix/Makefile
@@ -1,14 +1,13 @@
 CC = icc
-CCFLAGS = -lm -Wall -march=native
-RELEASEFLAGS = -O2
+CCFLAGS = -lm -Wall -march=native -O2
 
 all: rs_openmp rs_mpi
 
 debug: CCFLAGS += -g
 debug: rs_openmp rs_mpi
 
-rs_openmp: rs_openmp.c rs_shared.h
-	$(CC) -o rs_openmp rs_openmp.c rs_shared.h -fopenmp $(CCFLAGS) $(RELEASEFLAGS)
+rs_openmp: rs_openmp.c
+	$(CC) -o rs_openmp rs_openmp.c -fopenmp $(CCFLAGS)
 
-rs_mpi: rs_mpi.c rs_shared.h
-	mpicc -o rs_mpi rs_mpi.c rs_shared.h $(CCFLAGS)
+rs_mpi: rs_mpi.c
+	mpicc -o rs_mpi rs_mpi.c $(CCFLAGS)
