Pagerank: add accumulator to track where to send values

--- a/hw3_pagerank/Makefile
+++ b/hw3_pagerank/Makefile
@@ -1,9 +1,9 @@
 CC = mpicc
 
-pagerank: pagerank.c pr_graph.c
+pagerank: pagerank.c pr_graph.c pr_utils.c pr_radix_sort.c pr_accum.c
 	$(CC) -std=c99 -march=native -O3 -Wall -Wno-unused-result *.c -o pagerank -lm
 
-debug: pagerank.c pr_graph.c pr_utils.c
+debug: pagerank.c pr_graph.c pr_utils.c pr_radix_sort.c pr_accum.c
 	$(CC) -g -std=c99 -march=native -O0 -Wall -Wno-unused-result *.c -o pagerank -lm
 
 clean:
