--- a/pagerank_serial/Makefile
+++ b/pagerank_serial/Makefile
@@ -1,6 +1,6 @@
 
-pagerank: pagerank.c pr_graph.c
+pagerank_serial: pagerank_serial.c pr_graph_serial.c
 	$(CC) -std=c99 -march=native -O3 -Wall -Wno-unused-result *.c -o pagerank -lm
 
 clean:
-	rm -f pagerank
+	rm -f pagerank_serial
