Add pagerank timing for testing

--- a/pagerank_serial/Makefile
+++ b/pagerank_serial/Makefile
@@ -1,6 +1,6 @@
 
 pagerank_serial: pagerank_serial.c pr_graph_serial.c
-	$(CC) -std=c99 -march=native -O3 -Wall -Wno-unused-result *.c -o pagerank_serial -lm
+	$(CC) -std=gnu99 -march=native -O3 -Wall -Wno-unused-result *.c -o pagerank_serial -lm
 
 clean:
 	rm -f pagerank_serial
